# Aliyah

./: .gitignore  Cargo.toml  README.md  build.rs  install.py  install.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: release.yml
examples/: PLEASEREAD.md  accelerated_mps.py  cuda_cnn.py  error_test.py  example_script.py  example_vae.py  framework_test.py  jax_example.py  jax_output_test.py  kera_test.py  layer_comm.py  main.py  mps.py  new_jax.py  new_torch_example.py  pipeline.py  r2.py  rendering_example.py  test_model.py  test_pipe.py  test_script.py  test_two.py  tiny_render.py  torch_example.py  training_control_test.py  transformer.py  validation_test.py
python/: pyproject.toml  setup.py  test_hook.py
python/aliyah/: __init__.py  monitor.py
src/: error.rs  irc.rs  lib.rs  main.rs  parser.rs  runner.rs  zmq.rs
src/python/: mod.rs  runner.rs
