[package]
name = "aliyah"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
pyo3 = {version = "0.23.4", features = ["auto-initialize"] }
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sysinfo = "0.29"
tokio = {version = "1.43.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"
regex = "1.11.1"
chrono = "0.4.39"
zmq = "0.10.0"


[[bin]]
name = "aliyah"
path = "src/main.rs"
